<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FlowFree</string>
	<string name="buttonPlay">Play</string>
	<string name="buttonOptions">Options</string>
	<string name="titleScreen">An image</string>

	<string name="gameChooserTitle">Pick a level</string>

	<string name="optionCategoryFeedback">Sound and vibrations</string>
	<string name="optionCategoryColorBlind">Colorblind mode</string>
	<string name="optionCategoryReset">Reset</string>
	<string name="optionSound">Volume</string>
	<string name="optionSoundDetails">Set volume of sound effects (0 - 100)</string>
	<string name="optionVibrations">Vibrations</string>
	<string name="optionVibrationsDetails">Enable vibrations</string>
	<string name="optionColorBlindMode">Colorblind mode</string>
	<string name="optionColorBlindModeDetails">Adds numbers to each line</string>
	<string name="optionReset">Reset</string>
	<string name="optionResetDetails">Resets all progress</string>

	<string name="flowsComplete">"Flows: "</string>
	<string name="fillPercentage">% full</string>

	<string name="levelCompleted">Level completed!</string>
	<string name="levelNotFull">Level completed. But can you fill the grid?</string>
	<string name="cancel">Cancel</string>
	<string name="nextLevel">Next level</string>

	<string name="confirm">Are you sure?</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
</resources>
