<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
            android:title="@string/optionCategoryFeedback">
        <EditTextPreference
                android:defaultValue="50"
                android:key="sounds"
				android:inputType="number"
                android:title="@string/optionSound"
                android:summary="@string/optionSoundDetails">
        </EditTextPreference>
        <CheckBoxPreference
                android:defaultValue="true"
                android:key="vibrations"
                android:title="@string/optionVibrations"
                android:summary="@string/optionVibrationsDetails">
        </CheckBoxPreference>
	</PreferenceCategory>
	<PreferenceCategory
			android:title="@string/optionCategoryColorBlind">
		<CheckBoxPreference
				android:defaultValue="false"
				android:key="colorBlindMode"
				android:title="@string/optionColorBlindMode"
				android:summary="@string/optionColorBlindModeDetails">
		</CheckBoxPreference>
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/optionCategoryReset">
        <Preference android:key="reset"
					android:title="@string/optionReset"
                    android:summary="@string/optionResetDetails"/>
    </PreferenceCategory>
</PreferenceScreen>